<?xml version="1.0"?>
<package>
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>The path_planning package</description>

  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>Internal-Use Only</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
